# TIDBIT-share-WEAVE

./: .dockerignore  .gitignore  Dockerfile  README.md
.github/: CODEOWNERS
audit/: README.md  cargo-audit-2026-03-30.md  dependencies-2026-03-30.md
backend-rs/: .env.example  Cargo.toml  recovered.txt
backend-rs/migrations/: 0001_initial.sql  0002_envelope_onboarding.sql  0003_delivery_and_completion.sql  0004_security_agents.sql  0005_wallet_share_chains.sql  0006_wallet_mlkem_keys.sql
backend-rs/pq-wasm/: Cargo.toml
backend-rs/pq-wasm/src/: lib.rs
backend-rs/src/: arweave.rs  config.rs  delivery.rs  error.rs  main.rs  models.rs  sqlx.rs
backend-rs/src/c2c/: event.rs  filetrail.rs  mod.rs  onchain.rs  record.rs  store.rs  types.rs  verify.rs  workflow.rs
backend-rs/src/cli/: parser.rs
backend-rs/src/cli/commands/: auth.rs  c2c.rs  doc.rs  encrypt.rs  mod.rs  scan.rs  scan_url.rs  send.rs  sign.rs
backend-rs/src/cli/keys/: mod.rs
backend-rs/src/crypto/: keywrap.rs  mod.rs
backend-rs/src/crypto/canonical/: envelope.rs  kem.rs  keystore.rs  metadata.rs  tests.rs
backend-rs/src/identity_web/: evm.rs  sol.rs  state.rs
backend-rs/src/pqc/: dilithium.rs  kyber.rs
backend-rs/src/routes/: download.rs  health.rs  inbox.rs  mod.rs  share.rs  upload.rs
backend-rs/src/sanitizer/: ipinfo.rs  mod.rs
backend-rs/src/storage/: mod.rs  supabase.rs
backend-rs/web/: admin.html  admin.js  app.js  dashboard.html  document.html  edit.html  index.html  landing.html  pq-worker.js  pricing.html  public-sign.html  review.html  site.webmanifest  style.css  telemetry.js  upload.html  verify.html
docker/: start.sh
docs/: README.md  agent-workflows.md  architecture.md  code-walkthrough.md  encryption-and-decryption.md  review-and-custody-concepts.md  user-guide.md
src/: error.rs  models.rs
web/: app.js  style.css  upload.html
(+35 files in other folders)
