[package]
name = "tidbit_share_weave_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Crypto primitives ---
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = "1.7"
cookie = "0.18"
ethers-core = "2"

# PQC
pqcrypto-kyber = "0.7"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
chacha20poly1305 = "0.10"

# Hashing & EVM-style keys
sha3 = "0.10"
sha2 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
hex = "0.4"
base64 = "0.22"
hmac = "0.12"
hkdf = "0.12"

# Time / IDs
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Errors & utils
thiserror = "1"
anyhow = "1"
dirs = "5"
multer = "3"
bytes = "1"

# CLI
clap = { version = "4.5", features = ["derive"] }
rpassword = "7"

# HTTP server
axum = { version = "0.7", features = ["json", "multipart"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
# HTTP client (future use: Arweave/Bundlr/VT/etc.)
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }

