[package]
name = "tidbit_pq_wasm"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
chacha20poly1305 = "0.10"
fips203 = { version = "0.4.3", default-features = false, features = ["ml-kem-768"] }
fips204 = { version = "0.4.6", default-features = false, features = ["ml-dsa-65"] }
getrandom = { version = "0.2.17", features = ["js"] }
